Refactor collection models to use new DisplayMode enum
- Replaced references to the old DisplayMode enum in CollectionBaseModel with a new DisplayMode enum in the types package.
- Updated CollectionDao, CollectionEntity, CollectionModel, and CollectionRequests to reflect the new DisplayMode type.
- Removed the CollectionBaseModel class to streamline the model structure and improve maintainability.
- Adjusted related services and tests to ensure compatibility with the new model structure.